[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.13

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M	The Forgotten Server.exe
		data/
	M		global.lua
			items/
	M			items.otb
	M			items.xml
	M		npc/lib/npcsystem/modules.lua
]

[ Milestone
	Game protocol 9.50 support.
	Corrected Lua error function arguments in NPC system modules.
	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
	Updated items.
]