@@ -947,4 +947,12 @@
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="12644" slot="shield" function="onDeEquipItem"/>
+		<!-- Spellbook of Ancient Arcana -->
+	<movevent event="Equip" itemid="16112" slot="shield" level="150" function="onEquipItem">
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
+		<vocation name="Druid"/>
+		<vocation name="Elder Druid" showInDescription="0"/>
+	</movevent>
+	<movevent event="DeEquip" itemid="16112" slot="shield" function="onDeEquipItem"/>
 </movements>
