@@ -26,11 +26,13 @@
 			items/
 	M			items.otb
 	M			items.xml
+	M		movements/movements.xml
 	M		npc/lib/npcsystem/modules.lua
+	M		weapons/weapons.xml
 ]
 
 [ Milestone
-	Game protocol 9.50 support.
+	Game protocol 9.50/9.51 support.
 	Corrected Lua error function arguments in NPC system modules.
 	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 	Updated items.
